1. #1840 (Eva) HUB diag Logs are not recording the odometer a user enters during a transaction 6/3/22., 2. #1810 (Eva) Socket Time Out recorded as a Potential Wifi Connection Issue 4/26/22 => #2 done. 3. #1766 (Eva) Need the ability to rename the “Department Screen” 3/4/22.

--- a/app/src/main/res/layout/activity_accept_dept.xml
+++ b/app/src/main/res/layout/activity_accept_dept.xml
@@ -21,14 +21,15 @@
 
 
             <TextView
+                android:id="@+id/tv_DeptNumberHeader"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="25dp"
                 android:gravity="left"
-                android:textStyle="bold"
                 android:text="Enter Department Number"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textSize="@dimen/heading_text" />
+                android:textSize="@dimen/heading_text"
+                android:textStyle="bold" />
 
 
             <EditText
