--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -512,7 +512,7 @@
                 android:layout_marginLeft="40dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="40dp"
-                android:layout_marginBottom="10dp"
+                android:layout_marginBottom="8dp"
                 android:background="@color/colorFluid"
                 android:clickable="true"
                 android:onClick="goButtonAction"
@@ -561,8 +561,7 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:gravity="bottom"
-                android:orientation="vertical"
-                android:visibility="visible">
+                android:orientation="vertical">
 
 
                 <LinearLayout
@@ -599,7 +598,7 @@
                 android:layout_marginRight="20dp"
                 android:orientation="vertical"
                 android:paddingStart="20dp"
-                android:paddingTop="5dp"
+                android:paddingTop="8dp"
                 android:paddingEnd="20dp">
 
                 <!--Above two hose 1&2-->
