(Version: 0.53) => 1. #2002 (Eva) Printing Errors in logs. 9/19/2022., 2. Made changes related to p_type to change BT link's p_type between 1/2/3.

--- a/app/src/main/res/menu/reader.xml
+++ b/app/src/main/res/menu/reader.xml
@@ -67,6 +67,13 @@
         app:showAsAction="never" />
 
     <item
+        android:id="@+id/m_p_type"
+        android:orderInCategory="100"
+        android:title="p_type"
+        android:visible="false"
+        app:showAsAction="never" />
+
+    <item
         android:id="@+id/mrestartapp"
         android:orderInCategory="100"
         android:title="Restart App"
