--- a/app/src/main/res/layout/activity_bt_link_ptype.xml
+++ b/app/src/main/res/layout/activity_bt_link_ptype.xml
@@ -125,6 +125,16 @@
                     android:text="3"
                     android:textSize="20sp" />
 
+                <RadioButton
+                    android:id="@+id/type4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="30dp"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginEnd="20dp"
+                    android:checked="false"
+                    android:text="4"
+                    android:textSize="20sp" />
+
             </RadioGroup>
 
         </LinearLayout>
