(Version: 0.60) => #2060 (Bolong) BT Link pulser type selector 11/15/2022.

--- a/app/src/main/res/values-es/spanish.xml
+++ b/app/src/main/res/values-es/spanish.xml
@@ -56,6 +56,7 @@
     <string name="CameraMenu">Cámara</string>
     <string name="ReloadMenu">Recargar</string>
     <string name="PleaseWaitForHotspotConnect">Conectando al hotspot. Espere por favor...</string>
+    <string name="EmptyTankWarning">Este nivel del tanque es bajo. Por favor contacte a su Gerente.</string>
 
     <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
     <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
