(Version: V0.66) => 1. #2124 => Fixed issue terminating the transaction if 0 pulses received during fueling., 2. #2125 => Removed p_type option., 3. #2110 => Added "socket closed" error into log.

--- a/app/src/main/res/menu/reader.xml
+++ b/app/src/main/res/menu/reader.xml
@@ -66,12 +66,12 @@
         android:title="@string/RebootReader"
         app:showAsAction="never" />
 
-    <item
+    <!--<item
         android:id="@+id/m_p_type"
         android:orderInCategory="100"
         android:title="p_type"
         android:visible="false"
-        app:showAsAction="never" />
+        app:showAsAction="never" />-->
 
     <item
         android:id="@+id/menuEnglish"
