--- a/app/src/main/res/menu/reader.xml
+++ b/app/src/main/res/menu/reader.xml
@@ -66,6 +66,13 @@
         android:title="@string/RebootReader"
         app:showAsAction="never" />
 
+    <item
+        android:id="@+id/btLinkScope"
+        android:orderInCategory="100"
+        android:title="Scope"
+        android:visible="false"
+        app:showAsAction="never" />
+
     <!--<item
         android:id="@+id/m_p_type"
         android:orderInCategory="100"
