--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -56,4 +56,6 @@
     <color name="Dashboard_background">#f5f1f0</color>
     <color name="backbtn">#D6D7D7</color>
     <color name="HotspotOnToastColor">#D6D7D7</color>
+
+    <color name="chartBack">#F3E0B0</color>
 </resources>
