(Version: V0.93) => 1. #2358 (Eva) This screen should not take the {given names} into consideration. Always have it say Support Personnel 9/5/23 => Done., 2. #2310 => Done changes to include latest firmware file into apk.

--- a/app/src/main/res/menu/reader.xml
+++ b/app/src/main/res/menu/reader.xml
@@ -49,11 +49,11 @@
         android:title="@string/OnlineMenu"
         app:showAsAction="always"/>
 
-    <item
+    <!--<item
         android:id="@+id/mupgrade_normal_link"
         android:orderInCategory="100"
         android:title="upgrade firmware"
-        app:showAsAction="never" />
+        app:showAsAction="never" />-->
     <item
         android:id="@+id/mreconnect_ble_readers"
         android:orderInCategory="100"
