(Version: V1.8) => 1. #2562 (Brandon) Android 14 HUB Application Issues 3/25/24., 2. #2558 (Jake) Hose in use displaying on single hose systems 3/19/24.

--- a/app/src/main/res/values-es/spanish.xml
+++ b/app/src/main/res/values-es/spanish.xml
@@ -302,6 +302,7 @@
     <string name="UnableToGetHoseList">No se puede obtener la lista de mangueras desde el servidor</string>
     <string name="HoseListIsNotAvailable">Lista de mangueras no disponible</string>
     <string name="OneOfTheHoseIsBusy">Una de las mangueras está ocupada, inténtelo de nuevo más tarde.</string>
+    <string name="SingleHoseBusyStatus">Alimentando...</string>
 
     <string name="Quantity">Cantidad:</string>
     <string name="Pulse">pulso:</string>
